# TICMeter

./: Dockerfile  README.md  index.html  index.js  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml  questions.md
.github/workflows/: ci.yml
backend/: index.js  package-lock.json  package.json
backend/prisma/: schema.prisma
backend/public/: index.html
esp32/: .gitignore  CMakeLists.txt  README.md  index.js  partitions.csv  platformio.ini  sdkconfig  sdkconfig copy  sdkconfig.old
esp32/backup/: linky copy.cpp  linky copy.h  linky pointer.cpp  linky pointer.h
esp32/data/: index.html  reboot.html  style.css
esp32/main/: CMakeLists.txt  EEPROM.h  buildBin  common.h  config.cpp  config.h  cpu.cpp  gpio.cpp  http.cpp  idf_component.yml  linky.cpp  linky.h  main.cpp  main.h  mqtt.cpp  mqtt.h  pairing.h  shell.cpp  shell.h  web.cpp  wifi.cpp  wifi.h  wifi2.c  zigbee.cpp
esp32/main/include/: common.h  config.h  cpu.h  gpio.h  http.h  linky.h  main.h  mqtt.h  ota.h  pairing.h  shell.h  web.h  wifi.h  wifi2.h  zigbee.h
esp32/src/: common.h  config.cpp  config.h  linky.cpp  linky.h  main.cpp  main.h  mqtt.cpp  mqtt.h  wifiConfig.h
esp32/tramesLinky/: aFix
firmware/: .gitignore  CMakeLists.txt  create-ota.py  efuse_table.csv  nvs.csv  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
firmware/components/tuya-iot-link-sdk/: CMakeLists.txt
firmware/components/tuya-iot-link-sdk/port/: ble_wrapper.c  network_wrapper.c  storage_wrapper.c  system_wrapper.c
firmware/components/tuya-iot-link-sdk/tuya-connect-kit-for-mqtt-embedded-c/: CMakeLists.txt
firmware/components/tuya-iot-link-sdk/tuya-connect-kit-for-mqtt-embedded-c/examples/tuya_ota_demo/: qrencode_print.c
firmware/components/tuya-iot-link-sdk/tuya-connect-kit-for-mqtt-embedded-c/include/: atop_base.h  atop_service.h  matop_service.h  mqtt_bind.h  mqtt_service.h  tuya_endpoint.h  tuya_log.h  tuya_wifi_provisioning.h
firmware/components/tuya-iot-link-sdk/tuya-connect-kit-for-mqtt-embedded-c/interface/: ble_interface.h  storage_interface.h
firmware/components/tuya-iot-link-sdk/tuya-connect-kit-for-mqtt-embedded-c/libraries/coreJSON/source/: core_json.c
firmware/components/tuya-iot-link-sdk/tuya-connect-kit-for-mqtt-embedded-c/middleware/: http_client_wrapper.c
firmware/components/tuya-iot-link-sdk/tuya-connect-kit-for-mqtt-embedded-c/platform/linux/: ble_wrapper.c
firmware/components/tuya-iot-link-sdk/tuya-connect-kit-for-mqtt-embedded-c/src/: atop_base.c  atop_service.c  file_download.c  matop_service.c  mqtt_bind.c  mqtt_service.c  tuya_ble_service.c  tuya_endpoint.c  tuya_iot.c  tuya_wifi_provisioning.c
firmware/components/tuya-iot-link-sdk/tuya-connect-kit-for-mqtt-embedded-c/utils/: MultiTimer.c  cJSON.c  log.h  tuya_cloud_types.h
firmware/components/tuya-iot-link-sdk/tuya-iot-link-sdk-embedded-c/include/: atop_base.h  atop_service.h  matop_service.h  mqtt_service.h  tuya_endpoint.h
firmware/components/tuya-iot-link-sdk/tuya-iot-link-sdk-embedded-c/src/: atop_base.c  atop_service.c  file_download.c  matop_service.c  mqtt_service.c  tuya_iot.c
firmware/components/tuya-iot-link-sdk/tuya-iot-link-sdk-embedded-c/utils/: MultiTimer.c  MultiTimer.h  log.h  tuya_cloud_types.h
firmware/data/: index.html  index.js  ota_versions.csv  style.css
firmware/data/v2/: index.html  index.js  style.css
firmware/doc/: template.c  template.h
firmware/main/: CMakeLists.txt  common.c  config.c  config.cpp  dns_server.c  efuse_table.c  gpio.c  gpio.cpp  http.c  http.cpp  idf_component.yml  led.c  linky.c  linky.cpp  main.c  main.cpp  mqtt.c  mqtt.cpp  ota.c  ota.cpp  ota_zlib.c  power.c  shell.c  shell.cpp  tests.c  tuya.c  tuya.cpp  version.c  version.cpp  version.h  web.c  web.cpp  wifi.c  wifi.cpp  zigbee.c  zigbee.cpp
firmware/main/include/: common.h  config.h  efuse_table.h  gpio.h  http.h  led.h  linky.h  main.h  mqtt.h  ota.h  ota_zlib.h  power.h  shell.h  tests.h  tuya.h  web.h  wifi.h  zigbee.h
firmware/main/tuya_ble_netcfg/include/: MultiTimer.h  ble_interface.h  system_interface.h  tuya_cloud_types.h  tuya_error_code.h
firmware/main/tuya_ble_netcfg/src/: ble_wrapper.c  tuya_ble_service.c
firmware/old/: index.js  tuya.html
firmware/partition_table/: partitionTable.csv
firmware/patch/: esp_netif_sntp.h  sleep_modes.c
firmware/scripts/: compress.py  create_manifest.py  read_flash.bat  requirements.txt  save.json  trames.py  tuya.py  version_zigbee.py
firmware/src_data/: index.html  index.js  ota_versions.csv  style.css
firmware/tramesLinky/: HISTORIQUE Triphasé.txt  STANDARD Corompu.txt  STANDARD MONO2.txt  STANDARD Mono.txt  STANDARD PRODUCTION.txt  autoDetect.txt  crash.txt  datas.xlsx  tuya.xlsx
frontend/: nuxt.config.ts  package-lock.json  package.json
frontend/assets/scss/: style.scss
frontend/pages/: index.vue
pcb/: Schematic_LinkyESP32
public/: gauge.js  index.css  index.html  index.js  index.scss
webserver/: .env _sample  README.md  index.js  linky.sql  package-lock.json  package.json
webserver/prisma/: schema.prisma
webserver/public/: index.html  index.js  index.scss
webserver/simple_print/: README.md  index.js  package-lock.json  package.json
webserver/with_database/: README.md  index.js  package.json
webserver/with_database/public/: index.html
